# nirdizati-light

./: .gitignore  CTD.ipynb  Productions_sistemato.xes  README.md  build-docs.sh  dataset_confs.py  exported.xes  first_plot.py  first_plot_regression.py  leftovers.py  nirdizati_light.ipynb  pyproject.toml  run_cf_data_aug_pipeline.py  run_cf_data_aug_regression.py  run_full_pipeline.py  run_pipeline.py  run_simple_pipeline.py  run_simulation.py  schema_paper.drawio  setup.py
.ipynb_checkpoints/: results_cf-checkpoint.ipynb
BPI_Challenge_2012_W_Two_TS/: BPI_Challenge_2012_W_Two_TS.pnml  BPI_Challenge_2012_W_Two_TS_diapr_end_inter_scaler.pkl  BPI_Challenge_2012_W_Two_TS_diapr_inter_scaler.pkl  BPI_Challenge_2012_W_Two_TS_diapr_meta.json  BPI_Challenge_2012_W_Two_TS_diapr_scaler.pkl  BPI_Challenge_2012_W_Two_TS_dpiapr.h5
LRP_CMF_integration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bpic2012_2_start/: bpic2012_2_start_diapr_end_inter_scaler.pkl  bpic2012_2_start_diapr_inter_scaler.pkl  bpic2012_2_start_diapr_meta.json
bpic2012_2_start_old/: bpic2012_2_start_old.pnml  bpic2012_2_start_old_diapr_scaler.pkl  bpic2012_2_start_old_dpiapr.h5  bpic2012_2_start_old_dwiapr.h5
bpic2015_2_start/: bpic2015_2_start.pnml  bpic2015_2_start_diapr_end_inter_scaler.pkl  bpic2015_2_start_diapr_inter_scaler.pkl  bpic2015_2_start_diapr_meta.json  bpic2015_2_start_diapr_scaler.pkl  bpic2015_2_start_dpiapr.h5  bpic2015_2_start_dwiapr.h5
bpic2015_4_start/: bpic2015_4_start.bpmn  bpic2015_4_start.pnml  bpic2015_4_start_diapr_end_inter_scaler.pkl  bpic2015_4_start_diapr_meta.json  (+4 more)
(+335 files in other folders)
