[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nirdizati_light"
version = "0.1"
dependencies = [
  "dice_ml @ git+https://github.com/abuliga/DiCE.git@origin/main",
  "declare4py @ git+https://github.com/abuliga/declare4py.git@main",
  "pymining==0.2",
  "pandas~=1.5.3",
  "pm4py~=2.7.11",
  "scikit-learn~=1.5.0",
  "shap~=0.41.0",
  "numpy~=1.23.3",
  "hyperopt~=0.2.7",
  "dateparser~=1.2.0",
  "holidays==0.28",
  "funcy~=2.0.0",
  "xgboost~=2.0.3",
  "pymoo~=0.6.0.1",
  "torch~=2.2.1",
  "PDPbox~=0.3.0",
  "seaborn~=0.13.2"
]

[tool.setuptools.packages.find]
where = ["nirdizati_light"]